# CMake-Examples

./: .gitignore  README.md
01_Simple/: CMakeCache.txt  CMakeLists.txt  cmake_install.cmake  hello
02_Project_with_Directories/src/: Student.cpp
04_Building_Static_Library/: CMakeLists.txt
05_Using_Library/: CMakeLists.txt  libtest  libtest.cpp
06_Specifying_Target_Output_Path/: CMakeLists.txt  bar.c  bar.h  foo.c  foo.h  main.c
07_Make_SubProject/: CMakeLists.txt
07_Make_SubProject/include/: foo.h
07_Make_SubProject/src/: CMakeLists.txt  main.cpp
07_Make_SubProject/subproject/: CMakeLists.txt
07_Make_SubProject/subproject/include/: bar.h
07_Make_SubProject/subproject/src/: bar.c  main.cpp
Example_01/: Makefile
Example_02/: CMakeLists.txt
Example_02/include/: Student.h
Example_02/src/: mainapp.cpp
Example_03/: CMakeLists.txt
Example_05/: CMakeCache.txt  Makefile  cmake_install.cmake
